HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/RefinementDiagnosticsOwnership/Expected.uv
//! Expected diagnostic metadata for the RefinementDiagnosticsOwnership rejected-source specimen.

expectedDiagnostic("E-TYP-1954", "diag.14.RefinementPolymorphismDiagnosticsOwnership")
